Update Gradle toolchain
Older versions of Gradle toolchain are falling out of support and
stop working. Update Gradle binaries to 4.6 since current 4.4.1 starts
screaming about being unsupported. Current minimum Android API requires
at least Gradle 4.6.

New Gradle requires Google and JCenter repositories to be available
during compilation because AAPT2 tool has been moved to Google's repo.
Add these repositories to the search path.

However, we're still using Gradle 3.2.1 for the actual build. Just make
sure we're using the same version for both Android Themis and BoringSSL.
Version mismatches can cause build failures (at least now they do).

That said, as of now Google requires all submissions to Google Play
store to target Android API 28. Bump the version of build tools, SDK
used for compilation, and target SDK to 28. This means that we can use
all the new features, but we can still maintain compatibility with
earlier SDKs as necessary. Our minimum supported version is actually
Android API 21 (not 16) because that's required by BoringSSL build.

Finally, Android SDK 24 deprecates the old instrumentation testing
harness and introduces AndroidX test runner. Add those libraries and
appropriate repositories to the build.

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.2.1'
 
         // Two necessary plugins for uploading .aar to bintray
         // from: https://android.jlelse.eu/how-to-distribute-android-library-in-a-convenient-way-d43fb68304a7
@@ -16,17 +16,29 @@ buildscript {
     }
 }
 
+repositories {
+    google()
+    jcenter()
+}
+
 dependencies {
     implementation project(":boringssl")
+    // Instrumentation tests
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
 }
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
+    // BoringSSL requires at least API 21. Google Play as of August 2019 requires
+    // to target at least API 28 (but we can still support lower versions).
     defaultConfig {
-    	minSdkVersion 16
-        targetSdkVersion 16
+        minSdkVersion 21
+        targetSdkVersion 28
+        // Our tests are written in JUnit, set default runner appropriately
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     sourceSets {
@@ -40,6 +52,11 @@ android {
         androidTest.manifest.srcFile 'tests/themis/wrappers/android/AndroidManifest.xml'
 
 	}
+
+    // Dependencies for instrumentation tests
+    useLibrary 'android.test.runner'
+    useLibrary 'android.test.base'
+    useLibrary 'android.test.mock'
 
     // ensure we execute boringssl tasks first
     // tasks.whenTaskAdded({Task task -> task.dependsOn('boringssl:' + task.name)})
