Update and enable Android on CircleCI
Use a new Docker image for running tests. It contains updated Android
SDK and NDK, platform tools, system images, etc.

Remove the concurrency hacks since they seem to be no longer necessary
on CirceCI. We can avoid tweaking the build files and explicitly
specifying "--no-parallel --max-workers=2" in Gradle invocations.

Update the system image used for testing. Unfortunately, we still
need to use ARM emulation because x86 and x86_64 requires KVM which is
not available on CircleCI runners. More unfortunately, we need at least
Android API 24 in order to run new tests, and Android 24 is the last
version that has ARM images. It looks like we'll get into a pinch
when Google eventually decides to deprecate and remove the image.

Tweak the command line for running the emulator. Previously we had
disabled GPU, but that seems to break the current emulator and it gets
stuck in the boot process without going anywhere. Therefore, run with
GPU enabled. (We still don't need and cannot open a window though.)

All in all, this allows us to finally reenable Android build job!

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,24 +2,53 @@ version: 2
 jobs:
   android:
     docker:
-      - image: cossacklabs/android-build:2019.01
+      - image: cossacklabs/android-build:2019.11
     steps:
       - checkout
-      - run: git reset HEAD && git submodule sync && git submodule update --init
-      # limit CMake/Ninja build concurrency when building BoringSSL
-      # otherwise we hit the 4GB memory limit for the build container
-      - run: echo 'set_property(GLOBAL APPEND PROPERTY JOB_POOLS circleci_job_pool=4)' >> third_party/boringssl/src/CMakeLists.txt
-      - run: sed -i 's/"-GNinja"/"-DCMAKE_JOB_POOL_COMPILE=circleci_job_pool", "-GNinja"/g' third_party/boringssl/build.gradle
-      - run: ./gradlew --no-daemon --no-parallel --max-workers=2 assembleDebug
-      # install emulator image and create a device
-      - run: $ANDROID_HOME/tools/bin/sdkmanager 'emulator' 'system-images;android-22;default;armeabi-v7a'
-      - run: $ANDROID_HOME/tools/bin/avdmanager create avd --name nexus --device "Nexus 5" --package 'system-images;android-22;default;armeabi-v7a'
       - run:
-          command: $ANDROID_HOME/emulator/emulator -avd nexus -noaudio -no-window -gpu off -verbose -qemu
+          name: Initialize submodules
+          command: |
+            git reset --hard HEAD
+            git submodule sync
+            git submodule update --init
+      - run:
+          name: Build Themis
+          command: |
+            ./gradlew --no-daemon assembleDebug
+      - run:
+          name: Prepare Android emulator
+          command: |
+            # Unfortunately, x86 and x86_64 emulators require KVM support which
+            # is not enabled on CircleCI runners. That's why we have to go with
+            # extremely slow ARM emulation. Recent system images do not even
+            # support it (only x86 and x86_64), so we have to go with API 24.
+            avdmanager create avd \
+              --name nexus --device "Nexus 5" \
+              --package 'system-images;android-24;default;armeabi-v7a'
+      - run:
+          name: Launch Android emulator
           background: true
-      # wait for emulator to fully boot before running tests
-      - run: timeout 10m /bin/bash -c 'while true; do $ANDROID_HOME/platform-tools/adb wait-for-device logcat -b events -d | grep -i boot_progress_enable_screen && break; date; sleep 3; done'
-      - run: ./gradlew --no-daemon --no-parallel --max-workers=2 connectedAndroidTest
+          command: |
+            # Do not disable GPU (-gpu off) since that upsets the emulator and
+            # it gets stuck in an infinite loop during the boot process. However,
+            # we don't have X11 available so we don't need to see the window.
+            emulator -avd nexus -no-window -verbose -qemu
+      - run:
+          name: Wait for Android emulator to boot
+          command: |
+            # Normally this takes about 5 minutes.
+            timeout 15m /bin/bash -c \
+             'while true
+              do
+                  adb wait-for-device logcat -b events -d \
+                  | grep -i boot_progress_enable_screen && break
+                  date
+                  sleep 3
+              done'
+      - run:
+          name: Run test suite
+          command: |
+            ./gradlew --no-daemon connectedAndroidTest
 
   analyze:
     docker:
@@ -431,8 +460,7 @@ workflows:
   tests:
     jobs:
       - analyze
-      # Broken build temporarily disabled (see T1133, 2019-07-03)
-      # - android
+      - android
       - x86_64
       - jsthemis
       - php5
