--- a/src/wrappers/themis/wasm/package.json
+++ b/src/wrappers/themis/wasm/package.json
@@ -4,7 +4,8 @@
   "description": "Themis is a convenient cryptographic library for data protection.",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "build": "esbuild src/index.ts --bundle --platform=node --sourcemap --minify --outfile=dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,8 +23,9 @@
     "url": "https://github.com/cossacklabs/themis/issues"
   },
   "homepage": "https://www.cossacklabs.com/themis/",
-  "dependencies": {},
   "devDependencies": {
+    "@types/emscripten": "^1.39.4",
+    "@types/node": "^14.14.36",
     "esbuild": "^0.10.1",
     "mocha": "^7.1.1",
     "typescript": "^4.2.3"
