--- a/src/wrappers/themis/wasm/package.json
+++ b/src/wrappers/themis/wasm/package.json
@@ -4,7 +4,7 @@
   "description": "Themis is a convenient cryptographic library for data protection.",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "ts-mocha -p tsconfig.json test/test.js",
     "build": "esbuild src/index.ts --bundle --platform=node --sourcemap --minify --outfile=dist/index.js"
   },
   "repository": {
@@ -25,9 +25,12 @@
   "homepage": "https://www.cossacklabs.com/themis/",
   "devDependencies": {
     "@types/emscripten": "^1.39.4",
+    "@types/expect": "^24.3.0",
+    "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.36",
     "esbuild": "^0.10.1",
     "mocha": "^7.1.1",
+    "ts-mocha": "^8.0.0",
     "typescript": "^4.2.3"
   }
 }
