Add Node.js v16 support
Node.js v16 has been released yesterday [1], becoming the new "current"
stable release track of Node.js. It's going to turn LTS in October 2021.

[1]: https://nodejs.org/en/about/releases/

Node.js v10 release is scheduled for EOL this April. However, we're
still going to build and test our JavaScript stuff against it while
it's still practical.

--- a/.github/workflows/test-wasm.yaml
+++ b/.github/workflows/test-wasm.yaml
@@ -37,9 +37,10 @@ jobs:
       matrix:
         node-version:
           - 8.x   # legacy
-          - 10.x  # old LTS
-          - 12.x  # current LTS
-          - 14.x  # current stable
+          - 10.x  # legacy
+          - 12.x  # old LTS
+          - 14.x  # current LTS
+          - 16.x  # current stable
       fail-fast: false
     steps:
       - name: Install system dependencies
