--- a/docs/examples/android/app/build.gradle
+++ b/docs/examples/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 29
@@ -29,4 +30,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.12'
     implementation 'com.cossacklabs.com:themis:0.13.1'
+    implementation "androidx.core:core-ktx:1.3.2"
+    //noinspection GradleDependency: we use slightly outdated "kotlin_version" on purpose
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
