--- a/docs/examples/android/build.gradle
+++ b/docs/examples/android/build.gradle
@@ -5,12 +5,14 @@
 // https://developer.android.com/studio/build/jcenter-migration
 
 buildscript {
+    ext.kotlin_version = '1.3.72'
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
